# ESER

./: README.md
.devcontainer/: devcontainer.json
demo_project/: README.md
demo_project/color_detector/: mock_camera.py  package.xml  setup.cfg  setup.py
demo_project/color_detector/color_detector/: color_detector_node.py  environment_publisher.py  environment_subscriber.py
demo_project/color_detector/launch/: demo.launch.py
demo_project/color_detector/test_images/: generate_test_images.py
docs/: 学生课前准备手册.docx  学生课前准备手册.md
